--- a/nvfetcher.toml
+++ b/nvfetcher.toml
@@ -22,17 +22,17 @@ fetch.git = "https://gitlab.freedesktop.org/wayland/wayland-protocols.git"
 src.github = "CachyOS/proton-cachyos"
 fetch.url = "https://github.com/CachyOS/proton-cachyos/releases/download/$ver/proton-$ver-x86_64.tar.xz"
 
-[proton-cachyos-x86_64_v2]
+[proton-cachyos-x86_64-v2]
 src.github = "CachyOS/proton-cachyos"
-fetch.url = "https://github.com/CachyOS/proton-cachyos/releases/download/$ver/proton-$ver-x86_64_v2.tar.xz"
+fetch.url = "https://github.com/CachyOS/proton-cachyos/releases/download/$ver/proton-$ver-x86_64-v2.tar.xz"
 
-[proton-cachyos-x86_64_v3]
+[proton-cachyos-x86_64-v3]
 src.github = "CachyOS/proton-cachyos"
-fetch.url = "https://github.com/CachyOS/proton-cachyos/releases/download/$ver/proton-$ver-x86_64_v3.tar.xz"
+fetch.url = "https://github.com/CachyOS/proton-cachyos/releases/download/$ver/proton-$ver-x86_64-v3.tar.xz"
 
-[proton-cachyos-x86_64_v4]
+[proton-cachyos-x86_64-v4]
 src.github = "CachyOS/proton-cachyos"
-fetch.url = "https://github.com/CachyOS/proton-cachyos/releases/download/$ver/proton-$ver-x86_64_v4.tar.xz"
+fetch.url = "https://github.com/CachyOS/proton-cachyos/releases/download/$ver/proton-$ver-x86_64-v4.tar.xz"
 
 # Vintage Story
 # tracks official modding api and using src.cmd to fetch the latest and stable versions
