--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -145,7 +145,7 @@ jobs:
         run: |
           for pkg in ${{ matrix.packages }}; do
             echo "::group::Building $pkg"
-            nix build .#$pkg -L
+            nix build .#$pkg -L -o "result-$pkg"
             echo "::endgroup::"
           done
 
@@ -156,7 +156,7 @@ jobs:
         run: |
           nix profile add nixpkgs#attic-client
           attic login local http://attic:8080 $ATTIC_TOKEN
-          attic push tokidoki $(nix-store -qR ./result*) --ignore-upstream-cache-filter
+          attic push tokidoki $(nix-store -qR ./result-*) --ignore-upstream-cache-filter
 
   # Commit to nightly only when all builds succeed
   commit-changes:
