--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,6 +15,11 @@ on:
         options:
           - update-sources
           - promote-to-master
+      branch:
+        description: "Branch to build from"
+        required: false
+        default: "nightly"
+        type: string
 
 jobs:
   # Ensure sources are up-to-date
@@ -24,10 +29,16 @@ jobs:
     outputs:
       any_changed: ${{ steps.check.outputs.any_changed }}
       mesa_rev: ${{ steps.check.outputs.mesa_rev }}
+      branch: ${{ steps.set-branch.outputs.branch }}
+
     steps:
+      - name: Set branch
+        id: set-branch
+        run: echo "branch=${{ inputs.branch || 'nightly' }}" >> $GITHUB_OUTPUT
+
       - uses: actions/checkout@v4
         with:
-          ref: nightly
+          ref: ${{ steps.set-branch.outputs.branch }}
 
       - uses: cachix/install-nix-action@master
         with:
@@ -136,7 +147,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: nightly
+          ref: ${{ needs.update-sources.outputs.branch }}
 
       - uses: actions/download-artifact@v4
         with:
@@ -184,7 +195,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: nightly
+          ref: ${{ needs.update-sources.outputs.branch }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/download-artifact@v4
