--- a/nvfetcher.toml
+++ b/nvfetcher.toml
@@ -70,3 +70,8 @@ fetch.url = "https://github.com/new-world-tools/go-oodle/releases/download/v0.2.
 [eden-emulator]
 src.git = "https://git.eden-emu.dev/eden-emu/eden.git"
 fetch.git = "https://git.eden-emu.dev/eden-emu/eden.git"
+
+# Hytale Launcher
+[hytale-launcher]
+src.manual = "2026.01.13-b6c7e88"
+fetch.url = "https://launcher.hytale.com/builds/release/linux/amd64/hytale-launcher-$ver.zip"
