--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -2,26 +2,19 @@ name: Cron Scheduler
 
 on:
   schedule:
-    - cron: "0 5 * * *" # Daily at 5 AM UTC (Update & Build)
-    - cron: "0 8 * * 3" # Wednesdays at 8 AM UTC (Promote to Master)
+    - cron: "15 5 * * *" # Avoid 12AM queue
+    - cron: "15 8 * * 3" # Promote on Wednesdays
   workflow_dispatch:
 
 jobs:
-  trigger-nightly-workflow:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Trigger Daily Update
-        if: github.event.schedule == '0 5 * * *' || github.event_name == 'workflow_dispatch'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh workflow run update.yml --ref nightly
-          echo "Updating sources and caching updates on nightly."
+  trigger-nightly-update:
+    if: github.event.schedule == '15 5 * * *' || github.event_name == 'workflow_dispatch'
+    uses: ./.github/workflows/update.yml
+    with:
+      target_branch: "nightly"
+    secrets: inherit
 
-      - name: Trigger Weekly Promotion
-        if: github.event.schedule == '0 8 * * 3'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh workflow run promote.yml
-          echo "Executing the promotion from nightly to master."
+  trigger-weekly-promotion:
+    if: github.event.schedule == '15 8 * * 3'
+    uses: ./.github/workflows/promote.yml
+    secrets: inherit
