--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -1,8 +1,9 @@
 name: Promote to Master
 
 on:
+  schedule:
+    - cron: "15 8 * * 3" # Promote on Wednesdays
   workflow_dispatch:
-  workflow_call:
 
 jobs:
   promote-to-master:
